--- a/Build OpenGl/index.html
+++ b/Build OpenGl/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build WebGl.loader.js";
+      var loaderUrl = buildUrl + "/Build OpenGl.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build WebGl.data",
-        frameworkUrl: buildUrl + "/Build WebGl.framework.js",
-        codeUrl: buildUrl + "/Build WebGl.wasm",
+        dataUrl: buildUrl + "/Build OpenGl.data",
+        frameworkUrl: buildUrl + "/Build OpenGl.framework.js",
+        codeUrl: buildUrl + "/Build OpenGl.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Boomerang Hero",
